<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:contentPadding="2dp"
        app:cardBackgroundColor="@color/black"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_menu_vertical"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/nome_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/nome_titulo"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/nome_titulo"
                android:layout_toRightOf="@+id/nome_titulo"
                android:textSize="14sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/endereco_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nome_titulo"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/endereco_titulo"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/endereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nome_titulo"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/endereco_titulo"
                android:layout_toRightOf="@+id/endereco_titulo"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/numero_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endereco_titulo"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/numero_titulo"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endereco_titulo"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/numero_titulo"
                android:layout_toRightOf="@+id/numero_titulo"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/titulo_bairro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numero_titulo"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/bairro_titulo"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bairro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numero_titulo"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/titulo_bairro"
                android:layout_toRightOf="@id/titulo_bairro"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titulo_bairro"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/email2"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titulo_bairro"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/titulo_bairro"
                android:layout_toRightOf="@id/titulo_bairro"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/telefone_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/email_titulo"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/telefone2"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_titulo"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/telefone_titulo"
                android:layout_toRightOf="@id/telefone_titulo"
                android:textSize="14sp" />



        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>